# braindrive-concepts-lab

./: .gitignore
concepts/Concept-3/: .env.example  Dockerfile  README.md  Test-1.md  Test-Results.md  docker-compose.yml  pyproject.toml
concepts/Concept-3/concept3/: __init__.py  config.py  debug_server.py  intent_router.py  runtime.py  state.py
concepts/Concept-3/concept3/nodes/: __init__.py  audit_log.py  base.py  plan.py  (+5 more)
concepts/Concept-3/scripts/: cli.py  cli.sh  demo.py  run_demo.py
concepts/Concept-3/services/: intent_router_service.py  node_service.py  router_service.py
concepts/Concept-3/tests/: conftest.py  test_debug_endpoints.py  test_error_resilience.py  test_model_nodes.py  test_persistence.py  test_router_behavior.py  test_security_invariants.py  test_workflow_loop.py
concepts/Concept-5/: .dockerignore  .env.example  Dockerfile  Dockerfile.scrapling  Dockerfile.webterm  README.md  WORK-COMPLETED.md  docker-compose.yml  pyproject.toml
concepts/Concept-5/braindrive_runtime/: debug_server.py  intent_router.py  metadata.py  registry.py  router.py  runtime.py
concepts/Concept-5/scripts/: bootstrap.sh  cli.py  demo.sh  show_uid_gid.sh
concepts/Concept-5/services/: node_model_ollama_service.py  node_model_openrouter_service.py  node_runtime_bootstrap_service.py  node_service.py  node_workflow_folder_service.py  node_workflow_skill_service.py  router_service.py
concepts/Concept-5/tests/: test_model_nodes.py  test_persistence.py  test_router_behavior.py  test_scrapling_node.py  test_skill_node.py  test_web_console_node.py  test_workflow_loop.py
(+159 files in other folders)
